--- a/main/style.css
+++ b/main/style.css
@@ -55,3 +55,16 @@ nav a:hover {
     float: left;
     margin-right: 20px;
 }
+
+@media (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding-left: 0;
+        padding-right: 0;
+        text-align: center;
+        width: 100%;
+    }
+}
